# crateful

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml
.github/workflows/: default.yml
examples/nginx/: README.md  index.conf  registry.conf
examples/systemd/: crateful.service  crateful.timer
scripts/: coverage.sh  test.sh
src/: digest.rs  download.rs  main.rs
src/registry/: cache.rs
src/registry/index/: mod.rs
src/registry/index/configuration/: mod.rs  tests.rs
src/registry/index/package/: mod.rs  tests.rs
tests/integration/: main.rs
