[package]
name = "crateful"
version = "1.0.0"
authors = ["kit <kit@hastur.io>"]
edition = "2021"
description = "A tool for downloading Cargo package registries"
readme = "README.md"
repository = "https://github.com/kit-981/crateful"
license = "GPL-3.0-or-later"
keywords = ["async", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ahash = { version = "0.7.6", features = ["serde"] }
clap = { version = "3.0.10", features = ["derive"] }
eyre = "0.6.6"
futures = "0.3.19"
itertools = "0.10.3"
git2 = "0.13.25"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = "0.11.7"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
sha2 = "0.10.1"
tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.29", features = ["max_level_trace", "release_max_level_trace"] }
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.8"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = "0.7.0"
warp = "0.3.2"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = true